--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 
 /* Uncomment the code block below to see what happens */
 
-/*
-.container {
-  background-color: black;
+
+body {
+  background-color: lightblue;
+  text-align: center;
 }
-*/
+
