--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,16 @@ body {
   text-align: center;
 }
 
+.clock {
+  height: 100px;
+  width: 800px;
+  position: absolute;
+  font-family: courier, monospace;
+  text-align: center;
+  color: white;
+  font-size: 100px;
+  left: 18%;
+  
+  
+}
+
