--- a/css/main.css
+++ b/css/main.css
@@ -13,5 +13,11 @@
   body {background-color: lightgray;} 
   
   
+.clock
+{
+  font-family: 'Times New Roman', serif;
+  font-size: 50px;
+  text-align: center;
+}
 
 
